--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*
-  Theme Name: Deko - Digital Marketplace HTML Template
+  Theme Name: Deko - Digital Marketplace
   Support: admin@gmail.com
-  Description:Deko - Digital Marketplace HTML template.
+  Description:Deko - Digital Marketplace.
   Version: 1.0
 */
 
